@@ -1,3 +1,8 @@
+2009-08-28  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/validation.rb: default of encoding-validation is root
+	controller's page-encoding.
+
 2009-08-27  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/validation.rb: ignored nil at encoding validation.
